@@ -1,3 +1,9 @@
+2008-06-03  Eitan Isaacson  <eitan@ascender.com>
+
+	* macaroon/playback/utils.py: Added a keyval to key code function.
+	* macaroon/playback/keypress_actions.py: Removed all KEY_SYM 
+	generations, use KEY_PRESSRELEASE instead.
+
 2008-04-24  Willie Walker  <william.walker@sun.com>
 
 	* macaroon/playback/wait_actions.py: allow frame name to be
